test/fixtures/architecture-conformance/negative/cache-contract/cacheKeyContract.ts
// @ts-nocheck
export function buildInteractiveServingCacheKey(descriptor) {
  return `uri:${descriptor.uri}|doc:${descriptor.documentVersion}`;
}